--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -189,6 +189,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
 allow 178.162.209.56;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -261,9 +262,11 @@ allow 185.146.232.243;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
+allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
 allow 185.181.61.18;
@@ -495,7 +498,6 @@ allow 185.243.218.202;
 allow 185.243.218.204;
 allow 185.243.218.35;
 allow 185.243.218.41;
-allow 185.243.218.46;
 allow 185.243.218.61;
 allow 185.243.218.89;
 allow 185.243.218.95;
@@ -1227,6 +1229,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1295,7 +1298,6 @@ allow 2a03:94e0:ffff:185:243:218:0:202;
 allow 2a03:94e0:ffff:185:243:218:0:204;
 allow 2a03:94e0:ffff:185:243:218:0:35;
 allow 2a03:94e0:ffff:185:243:218:0:41;
-allow 2a03:94e0:ffff:185:243:218:0:46;
 allow 2a03:94e0:ffff:185:243:218:0:89;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
@@ -1334,7 +1336,6 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1684,7 +1685,6 @@ allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
-allow 50.19.117.48;
 allow 50.3.182.133;
 allow 50.3.182.156;
 allow 51.15.249.160;
@@ -1705,6 +1705,7 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.22.255.243;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1805,7 +1806,6 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
-allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
