--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -353,6 +353,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
@@ -421,7 +422,6 @@ deny 2a03:94e0:ffff:185:243:218:0:202;
 deny 2a03:94e0:ffff:185:243:218:0:204;
 deny 2a03:94e0:ffff:185:243:218:0:35;
 deny 2a03:94e0:ffff:185:243:218:0:41;
-deny 2a03:94e0:ffff:185:243:218:0:46;
 deny 2a03:94e0:ffff:185:243:218:0:89;
 deny 2a03:e600:100::1;
 deny 2a03:e600:100::2;
@@ -460,7 +460,6 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
