--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -189,6 +189,7 @@ set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.162.209.56;
+set_real_ip_from 178.17.170.184;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
@@ -261,9 +262,11 @@ set_real_ip_from 185.146.232.243;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
+set_real_ip_from 185.181.60.135;
 set_real_ip_from 185.181.61.115;
 set_real_ip_from 185.181.61.142;
 set_real_ip_from 185.181.61.18;
@@ -495,7 +498,6 @@ set_real_ip_from 185.243.218.202;
 set_real_ip_from 185.243.218.204;
 set_real_ip_from 185.243.218.35;
 set_real_ip_from 185.243.218.41;
-set_real_ip_from 185.243.218.46;
 set_real_ip_from 185.243.218.61;
 set_real_ip_from 185.243.218.89;
 set_real_ip_from 185.243.218.95;
@@ -1227,6 +1229,7 @@ set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
+set_real_ip_from 2a00:1dc0:caff:178::982b;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1295,7 +1298,6 @@ set_real_ip_from 2a03:94e0:ffff:185:243:218:0:202;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:204;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:35;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:41;
-set_real_ip_from 2a03:94e0:ffff:185:243:218:0:46;
 set_real_ip_from 2a03:94e0:ffff:185:243:218:0:89;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
@@ -1334,7 +1336,6 @@ set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
-set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6b72::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
@@ -1684,7 +1685,6 @@ set_real_ip_from 46.226.164.14;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
-set_real_ip_from 50.19.117.48;
 set_real_ip_from 50.3.182.133;
 set_real_ip_from 50.3.182.156;
 set_real_ip_from 51.15.249.160;
@@ -1705,6 +1705,7 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 52.22.255.243;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
@@ -1805,7 +1806,6 @@ set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
-set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
 set_real_ip_from 84.54.51.69;
 set_real_ip_from 85.17.9.83;
