--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -157,6 +157,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.232.115.9;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
@@ -645,7 +646,6 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.12.111.102;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -918,6 +918,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 206.188.196.222;
 allow 209.141.32.198;
 allow 209.141.38.110;
 allow 209.141.39.104;
@@ -1336,6 +1337,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1596,6 +1598,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
 allow 35.0.127.52;
+allow 35.170.238.73;
 allow 37.1.201.144;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1705,7 +1708,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.22.255.243;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1806,6 +1808,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
