--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.74.202;
 allow 162.251.5.152;
@@ -221,7 +220,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.233.179.82;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -950,7 +948,6 @@ allow 23.137.248.69;
 allow 23.137.250.34;
 allow 23.137.250.83;
 allow 23.137.253.108;
-allow 23.137.253.109;
 allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
@@ -978,6 +975,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.24.4;
 allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.236.122.62;
@@ -1004,12 +1002,12 @@ allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
+allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:fafd:f0e:2c::a;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
@@ -1734,6 +1732,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 52.6.91.69;
 allow 5.2.79.190;
 allow 5.34.182.203;
 allow 5.42.66.6;
