--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -150,7 +150,6 @@ deny 151.80.148.159;
 deny 152.89.233.169;
 deny 154.16.116.61;
 deny 160.119.249.240;
-deny 161.35.129.51;
 deny 162.247.72.192;
 deny 162.247.74.202;
 deny 162.251.5.152;
@@ -221,7 +220,6 @@ deny 179.43.182.232;
 deny 179.43.182.58;
 deny 179.48.251.188;
 deny 180.150.226.99;
-deny 18.233.179.82;
 deny 184.105.48.40;
 deny 185.100.85.132;
 deny 185.100.85.22;
@@ -950,7 +948,6 @@ deny 23.137.248.69;
 deny 23.137.250.34;
 deny 23.137.250.83;
 deny 23.137.253.108;
-deny 23.137.253.109;
 deny 23.137.253.110;
 deny 23.137.253.9;
 deny 23.152.24.77;
@@ -978,6 +975,7 @@ deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.24.4;
 deny 23.155.24.6;
 deny 23.155.8.104;
 deny 23.236.122.62;
@@ -1004,12 +1002,12 @@ deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
+deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:fafd:f0e:2c::a;
 deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:95b7::1;
@@ -1734,6 +1732,7 @@ deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
 deny 5.2.67.226;
+deny 52.6.91.69;
 deny 5.2.79.190;
 deny 5.34.182.203;
 deny 5.42.66.6;
