--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -126,12 +126,12 @@ deny 2600:3c03:e000:fa::2;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e5::104;
+deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:fafd:f0e:2c::a;
 deny 2602:fc24:12:759::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:95b7::1;
