--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -150,7 +150,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.74.202;
 set_real_ip_from 162.251.5.152;
@@ -221,7 +220,6 @@ set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 179.48.251.188;
 set_real_ip_from 180.150.226.99;
-set_real_ip_from 18.233.179.82;
 set_real_ip_from 184.105.48.40;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -950,7 +948,6 @@ set_real_ip_from 23.137.248.69;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
-set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
 set_real_ip_from 23.137.253.9;
 set_real_ip_from 23.152.24.77;
@@ -978,6 +975,7 @@ set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
+set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
@@ -1004,12 +1002,12 @@ set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
+set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fafd:f0e:2c::a;
 set_real_ip_from 2602:fc24:12:759::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
-set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
 set_real_ip_from 2602:fc24:19:95b7::1;
@@ -1734,6 +1732,7 @@ set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
 set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
+set_real_ip_from 52.6.91.69;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
 set_real_ip_from 5.42.66.6;
