--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -364,7 +364,6 @@ allow 185.220.101.161;
 allow 185.220.101.162;
 allow 185.220.101.163;
 allow 185.220.101.164;
-allow 185.220.101.165;
 allow 185.220.101.166;
 allow 185.220.101.167;
 allow 185.220.101.168;
@@ -487,7 +486,6 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.212;
 allow 185.241.208.232;
 allow 185.241.208.236;
 allow 185.241.208.243;
@@ -1336,6 +1334,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6b72::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1417,7 +1416,6 @@ allow 2a0b:f4c2:1::161;
 allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
-allow 2a0b:f4c2:1::165;
 allow 2a0b:f4c2:1::166;
 allow 2a0b:f4c2:1::167;
 allow 2a0b:f4c2:1::168;
@@ -1548,6 +1546,7 @@ allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:6a80:3:178::;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:d602:1:14bc::2;
@@ -1595,6 +1594,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 3.225.114.38;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1607,6 +1607,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.132.246.245;
@@ -1615,6 +1616,7 @@ allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
+allow 45.138.16.142;
 allow 45.138.16.203;
 allow 45.138.16.222;
 allow 45.138.16.230;
@@ -1661,6 +1663,7 @@ allow 45.80.158.205;
 allow 45.80.158.27;
 allow 45.80.208.225;
 allow 45.82.120.134;
+allow 45.82.122.152;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.9.148.219;
@@ -1705,7 +1708,6 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.4.79.44;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1806,6 +1808,7 @@ allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
