--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -364,7 +364,6 @@ deny 185.220.101.161;
 deny 185.220.101.162;
 deny 185.220.101.163;
 deny 185.220.101.164;
-deny 185.220.101.165;
 deny 185.220.101.166;
 deny 185.220.101.167;
 deny 185.220.101.168;
@@ -487,7 +486,6 @@ deny 185.241.208.196;
 deny 185.241.208.202;
 deny 185.241.208.204;
 deny 185.241.208.206;
-deny 185.241.208.212;
 deny 185.241.208.232;
 deny 185.241.208.236;
 deny 185.241.208.243;
@@ -1336,6 +1334,7 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:67c6::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6b72::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1417,7 +1416,6 @@ deny 2a0b:f4c2:1::161;
 deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
-deny 2a0b:f4c2:1::165;
 deny 2a0b:f4c2:1::166;
 deny 2a0b:f4c2:1::167;
 deny 2a0b:f4c2:1::168;
@@ -1548,6 +1546,7 @@ deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
+deny 2a0e:6a80:3:178::;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:d602:1:14bc::2;
@@ -1595,6 +1594,7 @@ deny 2a12:8641:3:24::;
 deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.42.185.134;
+deny 3.225.114.38;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.239.59;
@@ -1607,6 +1607,7 @@ deny 37.252.255.135;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.97.116.244;
+deny 45.11.59.28;
 deny 45.12.3.80;
 deny 45.128.232.151;
 deny 45.132.246.245;
@@ -1615,6 +1616,7 @@ deny 45.134.225.36;
 deny 45.135.132.20;
 deny 45.138.16.107;
 deny 45.138.16.113;
+deny 45.138.16.142;
 deny 45.138.16.203;
 deny 45.138.16.222;
 deny 45.138.16.230;
@@ -1661,6 +1663,7 @@ deny 45.80.158.205;
 deny 45.80.158.27;
 deny 45.80.208.225;
 deny 45.82.120.134;
+deny 45.82.122.152;
 deny 45.8.22.207;
 deny 45.83.104.137;
 deny 45.9.148.219;
@@ -1705,7 +1708,6 @@ deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.8.113;
 deny 5.196.95.34;
-deny 52.4.79.44;
 deny 5.255.100.219;
 deny 5.255.100.26;
 deny 5.255.101.10;
@@ -1806,6 +1808,7 @@ deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.225.54;
 deny 84.239.46.144;
+deny 84.54.51.61;
 deny 84.54.51.68;
 deny 84.54.51.69;
 deny 85.17.9.83;
